@@ -34,8 +34,8 @@ public class BaseChannelsBuffersSelectors {
     private static void testFilesWritingTextFile() throws IOException {
         Path dataPath = FileSystems.getDefault().getPath("data.txt");
         String appendData = "\nline 4";
-        byte[] appendBytes = appendData.getBytes(StandardCharsets.UTF_8); // 将string转成写入文件的字节; 指定编码的格式UTF_8
-        Files.write(dataPath, appendBytes, StandardOpenOption.APPEND); // 指定写入的模式: 默认是没有会创建，然后刷新其中的数据内容
+        // 将string转成写入文件的字节; 指定编码的格式UTF_8
+        Files.writeString(dataPath, appendData, StandardOpenOption.APPEND); // 指定写入的模式: 默认是没有会创建，然后刷新其中的数据内容
     }
 
     /**
